ADD: Implementing dashboard

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<main class="mx-auto flex flex-col my-20 justify-center gap-y-4 w-max">
-  <h1 class="text-2xl font-medium text-primary">
-    Base Project
-  </h1>
-
-  <button mat-stroked-button color="primary">
-    New Project
-  </button>
-</main>
+<header-generic/>
