--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,6 @@
 <header-generic [title]="'Homeworks'"/>
 
-
-@defer {
-  <div class="flex w-full justify-center gap-x-4 my-10">
-    <!-- Pending open/closed date options -->
-    <div class="flex p-3  text-center bg-gray-200 h-max">
-      Habits
-    </div>
-    <div cdkDropListGroup>
-      <list-group [tasks]="new" [title]="'New'" [drop]="drop"/>
-      <list-group [tasks]="active" [title]="'Active'" [drop]="drop"/>
-      <list-group [tasks]="closed" [title]="'Closed'" [drop]="drop"/>
-    </div>
-  </div>
-} @placeholder (minimum 1000ms) {
-  <div class="flex justify-center animate-pulse gap-x-4 my-10">
-
-    @for (item of [1, 2, 3]; track [1, 2, 3]) {
-      <div class="w-[400px] h-[200px] rounded bg-slate-200">
-
-      </div>
-    }
-  </div>
+@for (history of histories; track history.id) {
+  <history [history]="history"/>
 }
 
