--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,7 +70,7 @@ body {
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  cursor: move;
+  cursor: pointer;
   background: white;
   font-size: 14px;
 }
