feat: Implementing new design to dark | config angular.json to replace environments

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<header-generic [title]="'Homeworks'"/>
+<main>
+  <header-generic [title]="'Homeworks'"/>
 
-@for (history of histories; track history.id) {
-  <history [history]="history"/>
-}
+  @for (history of histories; track history.id) {
+    <history [history]="history"/>
+  }
+
+</main>
+
 
