--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,20 +20,50 @@ $frontend-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$frontend-theme: mat.define-light-theme((
-  color: (
-    primary: $frontend-primary,
-    accent: $frontend-accent,
-    warn: $frontend-warn,
-  )
-));
+$front-dark: mat.define-dark-theme(
+    (
+      color: (
+        primary: $frontend-primary,
+        accent: $frontend-accent,
+        warn: $frontend-warn,
+      )
+    )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($frontend-theme);
+// @include mat.all-component-themes($front-dark);
 
-/* You can add global styles to this file, and also import other style files */
+
+// Define a dark theme
+$dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $frontend-primary,
+    accent: $frontend-accent,
+    warn: $frontend-warn,
+    dialog: (
+      background: mat.get-color-from-palette($frontend-primary, A400),
+      color: mat.get-color-from-palette($frontend-primary, default-contrast)
+    )
+  ),
+  // Only include `typography` and `density` in the default dark theme.
+  typography: mat.define-typography-config(),
+  density: -1,
+));
+
+// Define a light theme
+$light-theme: mat.define-light-theme((
+  color: (
+    primary: $frontend-primary,
+    accent: $frontend-accent,
+    warn: $frontend-warn,
+  ),
+));
+
+// Apply the dark theme by default
+@include mat.all-component-themes($light-theme);
+
 
 html, body {
   height: 100%;
@@ -42,6 +72,10 @@ html, body {
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
+
+  &.dark {
+    @include mat.all-component-themes($dark-theme);
+  }
 }
 
 
@@ -54,9 +88,7 @@ body {
 }
 
 .example-list {
-  border: solid 1px #ccc;
   min-height: 60px;
-  background: white;
   border-radius: 4px;
   overflow: hidden;
   display: block;
@@ -64,14 +96,12 @@ body {
 
 .example-box {
   padding: 20px 10px;
-  color: rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   cursor: pointer;
-  background: white;
   font-size: 14px;
 }
 
@@ -95,3 +125,4 @@ body {
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
