--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,21 +14,9 @@
 // $frontend-primary: mat.define-palette(mat.$indigo-palette);
 $frontend-primary: mat.define-palette(mat.$deep-purple-palette, A200, A100, A400);
 $frontend-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
 // The warn palette is optional (defaults to red).
 $frontend-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$front-dark: mat.define-dark-theme(
-    (
-      color: (
-        primary: $frontend-primary,
-        accent: $frontend-accent,
-        warn: $frontend-warn,
-      )
-    )
-);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -39,9 +27,9 @@ $front-dark: mat.define-dark-theme(
 // Define a dark theme
 $dark-theme: mat.define-dark-theme((
   color: (
-    primary: $frontend-primary,
-    accent: $frontend-accent,
-    warn: $frontend-warn,
+    primary: mat.define-palette(mat.$blue-gray-palette, A200, A100, A400),
+    accent: mat.define-palette(mat.$pink-palette, A200, A100, A400),
+    warn: mat.define-palette(mat.$red-palette)
   ),
   // Only include `typography` and `density` in the default dark theme.
   typography: mat.define-typography-config(),
