--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ $frontend-warn: mat.define-palette(mat.$red-palette);
 // Define a dark theme
 $dark-theme: mat.define-dark-theme((
   color: (
-    primary: mat.define-palette(mat.$blue-gray-palette, A200, A100, A400),
+    primary: mat.define-palette(mat.$deep-purple-palette, A200, A100, A400),
     accent: mat.define-palette(mat.$pink-palette, A200, A100, A400),
     warn: mat.define-palette(mat.$red-palette)
   ),
